_sass/pages/cars.scss
#cars {
    .car {
        .car-picture {
            @extend .img;
            
            background-size: contain;
            background-position: center-center;
            width: 100%;
            height: 200px;
            
            &.sixteen-car {
                background-image: url("../images/cars/2016.png");
            }
            
            &.ten-car {
                background-image: url("../images/cars/2010.jpg");
            }
            
            &.five-car {
                background-image: url("../images/cars/2005.jpg");
            }

            &.ninety-five-car {
                background-image: url("../images/cars/1995.jpg");
            }
        }
    }

    .big-picture {
        @extend .img;
        background-size: cover;
        height: 200px;
        margin: -1 * $standard-margin -1 * $standard-margin 0;
        
        &.sixteen-car {
            background-image: url('../images/cars/banners/2016.jpg');
        }
        
        &.ten-car {
            background-image: url('../images/cars/banners/2010.jpg');
        }

        &.five-car {
            background-image: url('../images/cars/banners/2005.jpg');
        }
    }

    .fast-facts {
        ul {
            margin: 0;
            padding: 0;
            padding-left: 30px;

            li {
                margin-bottom: 10px;

                &:last-of-type {
                    margin-bottom: 0;
                }
            }
        }
    }

    .specs {
        &:first-of-type {
            margin-bottom: 10px;
        }
        
        section.specification {
            background: #F1F1F1;
            padding: 0 10px;
    
            table {
                width: 100%;
                
                thead th,
                tbody td {
                    padding: 10px 0;
                }
    
                thead th {
                    text-align: left;
                    border-bottom: 3px solid #CCC;
                }
    
                tbody td {
                    &:first-child {
                        font-weight: bold;
                        width: 40%;
                    }
    
                    &:last-child {
                        padding-left: 10px;
                    }
                }
            }
        }
    }

    @include media-query(tablet) {
        .car {
            .car-picture {
                float: left;
                width: 25%;
                height: 150px;
            }
            
            .description {
                float: left;
                width: 75%;
                box-sizing: border-box;
                padding-left: 20px;
            }
        }
        
        .big-picture {
            height: 500px;
            margin: -2 * $standard-margin 0 0;
        }

        .specs {
            float: left;
            width: 50%;
            box-sizing: border-box;
            padding-left: 10px;
            
            &:first-of-type {
                padding-right: 10px;
                padding-left: 0;
            }
        }
    }
    
    @include media-query(enormous) {
        .big-picture {
            height: 700px;
        }
    }
}

